chore(deps): added php 7.3 support

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0",
+    "php": "^7.3|^8.0",
     "laravel/framework": "^8.29"
   },
   "autoload": {
