--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.3|^8.0",
-    "laravel/framework": "^8.29"
+    "laravel/framework": "^8.29|9"
   },
   "autoload": {
     "psr-4": {
